--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -1,11 +1,13 @@
 
 #portfolio{
     display: grid;
-    grid-template-columns: 5% 60% 5%;
+    grid-template-columns: 30% 60% 30%;
     height:100%;
-    gap :15px;
     justify-content: center;
     margin-top: 5px;
+    margin-bottom: 5px;
+    overflow-x: hidden;
+    overflow-y:hidden;
 }
 /* #portfolio * {
     border: solid 1px red;
@@ -52,9 +54,11 @@
 .imageContainer{
     position: relative;
     display: flex;
-    height: 100%;
+    height: 98%;
+    width: 100%;
     align-items: center;
     justify-content: center;
+    z-index: 1;
 }
 .imageTitleContainer{
     position: absolute;
@@ -65,7 +69,7 @@
     width: 20%;
     grid-row:2;
     display: grid;
-    z-index:1;
+    z-index:2;
     text-align: center;
 }
 .imageTitle{
@@ -87,4 +91,12 @@
     border-radius: 5px;
     justify-self: center;
     cursor: pointer;
+}
+.backBtnContainer{
+    display: flex;
+    justify-content: flex-end;
+}
+.nextBtnContainer{
+    display: flex;
+    justify-content: flex-start;
 }
